# argus-trainer

./: .env.example  .gitignore  config.yaml  pyproject.toml  requirements.txt
src/trainer/: __init__.py  __main__.py  agent_prompts.py  claude_runner.py  config.py  cost_tracker.py  hooks.py  notifier.py  orchestrator.py  state.py
templates/: answer_key_builder.md  deep_gap_analyzer.md  finding_auditor.md  fix_implementer.md  pre_pipeline_review.md  system_prompt.md  walkthrough_analyzer.md
tests/: test_config.py  test_state.py
